@@ -1,3 +1,7 @@
+Tue Aug  8 16:36:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Add test of mbound.
+
 Tue Aug  8 16:24:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Add automatic detection of socklen_t, so that we don't get nasty
